# Token_Hunter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: audit.yml  ci.yml
docs/: 00-agent-identity.md  01-architecture.md  02-demo-script.md  03-scenarios.md  04-security-design.md  05-cost-and-roadmap.md  06-pitch-outline.md  07-build-status.md  08-demo-recording.md
memories/: learnings.example.md  user-profile.example.md
src/: absence_feedback.py  absence_mode.py  agent.py  agent_helpers.py  audit.py  cli.py  cost_meter.py  escalation.py  forensic.py  forensic_log.py  http_retry.py  kill_switch.py  main.py  memory_inspect.py  memory_writes.py  permissions.py  recipient_tracker.py  replay.py  session_log.py  session_store.py  tier2_confirm.py  trust_curve.py  undo_window.py  voice_corpus.py  voice_scorer.py  why_button.py
src/chat/: base.py  teams.py  teams_auth.py  telegram.py
src/tools/: bluesky_mcp.py  gmail_mcp.py  kimi_bulk.py  memory_mcp.py
tests/: _fake_adapter.py  test_absence_feedback.py  test_absence_mode.py  test_agent_helpers.py  test_agent_hooks.py  test_audit.py  test_bluesky_forensic.py  test_bluesky_mcp.py  test_chat_base.py  test_chat_teams.py  test_cli.py  test_cost_meter.py  test_e2e_flows.py  test_escalation.py  test_forensic.py  test_forensic_log.py  test_gmail_mcp.py  test_http_retry.py  test_kill_switch.py  test_kimi_bulk.py  test_memory_inspect.py  test_memory_mcp.py  test_memory_writes.py  test_permissions.py  test_recipient_tracker.py  test_replay.py  test_session_log.py  test_session_store.py  test_system_prompt.py  test_teams_auth.py  test_tier2_confirm.py  test_trust_curve.py  test_undo_window.py  test_voice_corpus.py  test_voice_scorer.py  test_why_button.py
