[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fushou"
version = "0.1.0"
description = "副手 (Fushou) — single-user Telegram-based AI delegate. ASUS Agentic AI 2026."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.111",
    "python-telegram-bot[webhooks]>=21.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "pip-audit>=2.7.0",
]

# W2+ deps — uncomment as features land
# gmail   = ["imap-tools>=1.6"]
# bluesky = ["atproto>=0.0.50"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
