[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fushou"
version = "0.1.0"
description = "副手 (Fushou) — single-user AI delegate over Telegram or Microsoft Teams. ASUS Agentic AI 2026."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.81",
    # Chat platforms — both adapters live in src/chat/ and are switched at
    # startup by CHAT_PLATFORM env. Both deps are kept lightweight; Teams
    # uses the Bot Framework REST API directly via httpx, no botbuilder.
    "python-telegram-bot[webhooks]>=21.0",
    "aiohttp>=3.9",
    # JWT verification for inbound Teams webhooks. `[crypto]` pulls in the
    # `cryptography` package for RS256 support (the algorithm Bot Framework
    # uses). PyJWT is the de-facto Python JWT lib; we use its standard
    # validators rather than rolling our own crypto.
    "pyjwt[crypto]>=2.8",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "imap-tools>=1.6",
    "atproto>=0.0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
